# url-shortener

./: .env.example  Cargo.toml  README.md
migrations/: 20251024072202_short_urls.sql
src/: main.rs
src/application/: dtos.rs  services.rs
src/domain/: entities.rs  mod.rs  repositories.rs
src/domain/utils/: utilities.rs
src/domain/validators/: url_validator.rs
src/infrastructure/: database.rs  mod.rs  repositories.rs  scheduler.rs
src/presentation/: handlers.rs  routes.rs
