[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.80.0" }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
url = "2"